# advent_of_code_2021

./: .gitignore  README.md
day_1/src/: main.cpp
day_2/: CMakeLists.txt
day_2/src/: main.cpp  read_input.h
